# recommendation_ML

./: .gitignore  README.md  main.py  mlflow.db  pyproject.toml
analysis/: EDA.ipynb
analysis/analysis_src/: data_inspaction.py  univariate_analysis.py
config/: db.sqlite3  manage.py
config/api/: apps.py  models.py  urls.py  views.py
config/api/migrations/: 0001_initial.py
config/config/: settings.py
data/: laptop_data.csv
explainations/: fatory_design_patterns.py  strategy_design_pattern.py
extracted_data/raw/: laptops_20260222_193611_d676c136.json  laptops_20260222_203045_d676c136.json  laptops_20260223_230457_d676c136.json  laptops_20260223_230457_d676c136.parquet
models/: laptop_recommender_20260223_230457_d676c136_config.pkl  production_version.json
pipelines/: deployment_pipeline.py  training_pipeline.py
src/: data_ingest.py  explainer.py  feature_store.py  knn_index.py  mlflow_tracker.py  model_evaluator.py  recommendation_engine.py  text_encoder.py
steps/: feature_engineering_step.py  model_building_step.py
